# optio

./: #notes-4.md#  .gitignore  AGENTS.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
docs/: 2026-03-27-documentation-housekeeping-design.md  2026-03-27-documentation-housekeeping-plan.md  2026-03-28-metadata-search-design.md  2026-03-28-metadata-search-plan.md  2026-03-28-optio-dashboard-design.md  2026-03-28-optio-dashboard-plan.md  2026-04-10-windage-extension-points-spec.md  2026-04-14-process-filter-bundle-design.md  2026-04-14-process-filter-bundle-plan.md  2026-04-21-optio-opencode-notes.md  2026-04-21-optio-opencode-seed-spec.md  2026-04-21-optio-widget-extensions-design.md  2026-04-21-optio-widget-extensions-plan.md  2026-04-22-optio-opencode-design.md  2026-04-22-optio-opencode-plan.md  2026-04-22-process-reconciliation-design.md  2026-04-22-widget-reconciliation-delta-plan.md  2026-04-24-optio-resume-design.md  2026-04-24-optio-resume-plan.md  2026-04-25-opencode-task-hooks-design.md  2026-04-26-opencode-task-hooks-plan.md  2026-04-27-opencode-resume-awareness-design.md  2026-04-27-opencode-resume-awareness-plan.md  2026-04-27-optio-api-auth-bypass-fix-design.md  2026-04-27-optio-api-auth-bypass-fix-plan.md  2026-04-27-partial-task-regen-design.md  2026-04-27-partial-task-regen-plan.md  2026-04-28-metadata-filter-completion-design.md  2026-04-28-metadata-filter-completion-plan.md  2026-04-29-deadline-driven-cancel-design.md  2026-04-29-deadline-driven-cancel-plan.md  2026-04-29-deliverable-relpath-plan.md  (+166 more)
(+99 files in other folders)
